@@ -1,6 +1,9 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
-
+ 
+- added --remove-destination to cp commands installing plugins
+- fixed "plugin doesn't honor APIVERSION" (reported by carel@vdrportal)
+- updated Italian translation (thanks to Diego Pierotto)
 - config option "client may suspend" hidden if not applicable
 - updated and enhanced README
 - separated language resources of client and server
